--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@
 }
 
 
-
-
+/* USESNAME ICON AREA  */
 .userIconUsernameContainer {
     display: grid;
     grid-template-columns: auto auto;
@@ -81,6 +80,7 @@
     grid-row: 2/8;
 }
 
+/* TYPING TEXT AREA */
 .textTypingContainer {
     grid-column: 3/8;
     grid-row: 8;
@@ -92,7 +92,14 @@
 }
 
 .textTypingContainer>textarea {
+    font-size: 25px;
     grid-column: 2/5;
+    border: none;
+}
+
+.textTypingContainer>textarea:focus-visible {
+    outline: none;
+
 }
 
 .textTypingContainer>textarea::placeholder {
@@ -100,21 +107,29 @@
     text-align: center;
 }
 
+
+/* emoji icon */
 .emoji {
+    display: grid;
+    grid-template-rows: auto;
+    place-items: center;
     grid-column: 1;
 }
 
 #emoji {
-    opacity: 80%;
-    width: 50%;
-    height: 20%;
+    opacity: 60%;
+    width: 50px;
+    height: 50px;
 }
 
 .paperAirplane {
+    display: grid;
+    grid-template-rows: auto;
+    place-items: center;
     grid-column: 5/6;
 }
 
 #paperAirplane {
-    width: 50%;
-    height: 20%;
+    width: 50px;
+    height: 50px;
 }
