--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
+html {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 16px;
+
+}
+
+#onlinestatus {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: rgb(43, 255, 0);
+    border: 2px solid white;
+    bottom: 0;
+    top: 100%;
+    left: 115%;
+    position: absolute;
+}
+
+#offlinestatus {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: gray;
+    border: 2px solid white;
+    bottom: 0;
+    top: 100%;
+    left: 115%;
+    position: absolute;
+}
+
+#imgContainerList {
+    width: 50px;
+    height: 50px;
+    position: relative;
+
+}
+
+ul {
+    padding: 0;
+    list-style-type: none;
+}
+
 .container {
     background-color: rgb(39, 225, 231);
     display: grid;
@@ -7,7 +49,7 @@
 }
 
 .container>div {
-    font-size: 40px;
+    font-size: 2rem;
     text-align: center;
     background-color: white;
     border: 1px solid rgb(165, 165, 165, 0.3);
@@ -16,7 +58,6 @@
 /* typing Area */
 .container>input {
     font-size: 22px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: left;
     background-color: white;
     border: 1px solid gray;
@@ -29,23 +70,82 @@
     grid-row: 1;
     grid-column: 1/3;
     border-right: 2px solid rgb(167, 166, 166);
-    /* border: 1px solid;
-    box-shadow: 5px 10px; */
+
 }
 
-/* Search input */
-.searchContainer>input {
-    text-align: center;
+.searchContainer>div>img {
+    width: 30px;
+    height: 30px;
+}
+
+.searchContainer>div {
+    padding: 5px;
     border-radius: 15px;
-    font-size: 40px;
     border: 1px solid rgb(192, 192, 192);
 }
 
+/* Search input */
+.searchContainer>div>input {
+    border: none;
+    text-align: center;
+    font-size: 40px;
+}
+
+#searchBar:focus-visible {
+    outline: none;
+}
+
+
 .listContainer {
+    display: grid;
+    grid-template-rows: min-content auto;
     grid-column: 1/3;
     grid-row: 2/9;
 }
 
+.listItemsContainer {
+    display: grid;
+    grid-template-columns: min-content auto auto;
+    border: 1px solid rgb(165, 165, 165, 0.3);
+
+}
+
+#listUserIcon {
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    border-radius: 50%;
+    border: 1px solid grey;
+    cursor: pointer;
+    padding: 2px;
+}
+
+#refreshIcon {
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    margin-top: 10px;
+    background-color: white;
+    border-radius: 50%;
+    border: 1px solid grey;
+    cursor: pointer;
+    padding: 2px;
+}
+
+#refreshIcon:hover {
+    opacity: 0.3;
+}
+
+#refreshIcon:active {
+    opacity: 0.8;
+    box-shadow: 1px 1px 8px 1px #9e9c9c;
+}
+
+.refreshIconContainer {
+    display: grid;
+    grid-template-columns: auto;
+    place-items: left;
+}
 
 /* USESNAME ICON AREA  */
 .userIconUsernameContainer {
@@ -60,13 +160,31 @@
     opacity: 0.3;
 }
 
+.userProfilePicture:active {
+    opacity: 0.8;
+    box-shadow: 1px 1px 8px 1px #9e9c9c;
+}
+
+
 .saveNameButton:hover {
     opacity: 0.3;
+}
+
+.saveNameButton:active {
+    opacity: 0.8;
+    box-shadow: 1px 1px 8px 1px #9e9c9c;
+}
+
+
+.editNameButton:active {
+    opacity: 1;
+    box-shadow: 1px 1px 8px 1px #9e9c9c;
 }
 
 .editNameButton:hover {
     opacity: 0.3;
 }
+
 
 .userIconUsernameContainer>div {
     display: grid;
@@ -105,7 +223,7 @@
 
 }
 
-.userIconUsernameContainer>div>input[type="text"] :focus-visible {
+#username:focus-visible {
     outline: none;
 }
 
@@ -139,7 +257,7 @@
 }
 
 .textTypingContainer>textarea::placeholder {
-    font-size: 200%;
+    font-size: 150%;
     text-align: center;
 }
 
@@ -152,9 +270,10 @@
     grid-column: 1;
 }
 
+
+
 #emoji:hover {
     opacity: 0.3;
-    justify-self: start;
 }
 
 #emoji {
@@ -174,6 +293,7 @@
 #paperAirplane:hover {
     opacity: 0.3;
 }
+
 
 #paperAirplane {
     cursor: pointer;
