--- a/style.css
+++ b/style.css
@@ -105,9 +105,23 @@ ul {
 
 .listItemsContainer {
     display: grid;
+    padding-bottom: 15px;
+    position: relative;
+    margin-top: 2px;
+    margin-bottom: 2px;
     grid-template-columns: min-content auto auto;
     border: 1px solid rgb(165, 165, 165, 0.3);
+    transition: border 0.2s;
+}
 
+.listItemsContainer>div {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+}
+
+.listItemsContainer:hover {
+    border-right: 10px solid blue;
 }
 
 #listUserIcon {
@@ -145,6 +159,25 @@ ul {
     display: grid;
     grid-template-columns: auto;
     place-items: left;
+}
+
+#userLastMessage {
+    color: gray;
+    font-size: 1rem;
+    padding-left: 50px;
+}
+
+#dateContainer {
+    display: grid;
+    place-items: center;
+}
+
+#lastOnline {
+    padding: 5px;
+    background-color: aliceblue;
+    border: 1px solid rgb(177, 177, 177, 0.3);
+    font-size: 0.9rem;
+    border-radius: 20px;
 }
 
 /* USESNAME ICON AREA  */
